--- a/ssh/Jenkinsfile
+++ b/ssh/Jenkinsfile
@@ -9,6 +9,8 @@ pipeline {
                     pwd
                     rm -rf *
                     mvn --version
+                    echo "test ssh key"
+                    ssh -T git@github.com
                 """)
                 }
         }
