--- a/ssh/Jenkinsfile
+++ b/ssh/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
                     rm -rf *
                     mvn --version
                     echo "test ssh key"
-                    ssh -T git@github.com
+                    ssh -vT git@github.com
                 """)
                 }
         }
