--- a/ssh/Jenkinsfile
+++ b/ssh/Jenkinsfile
@@ -9,16 +9,19 @@ pipeline {
                     pwd
                     rm -rf *
                     mvn --version
-                    echo "test ssh key"
-                    ssh -vT git@github.com
                 """)
                 }
         }
         stage('test pipeline') {
             steps{
                 sh(script: """
-                   echo "hello"
-                   git clone git@github.com:davidxy123/fair-play.git
+                   echo "check branch"
+                   git branch
+                   git branch -a
+                   echo "check tags"
+                   git tag -l
+                   echo "find files"
+                   tree -alh
                    cd ./fair-play
                    ls
                    whoami
