--- a/ssh/Jenkinsfile
+++ b/ssh/Jenkinsfile
@@ -18,6 +18,7 @@ pipeline {
                    echo "check branch"
                    git branch
                    git branch -a
+                   get checkout main
                    echo "check tags"
                    git tag -l
                    echo "find files"
