--- a/ssh/Jenkinsfile
+++ b/ssh/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                    echo "check branch"
                    git branch
                    git branch -a
-                   git checkout main
+                   git fetch --all
                    echo "check tags"
                    git tag -l
                    echo "find files"
